# renderdoc

./: .gitignore  CMakeLists.txt  build_android_arm.cmd  build_android_x64.cmd  build_mac.sh  build_win_llvm.cmd  build_win_msvc.cmd  test.sh
Z_Work/: PythonAPI.txt  PythonShell.doc  RemoteHost.xmind  RenderDoc回放.xmind  Renderdoc程序服务端.xmind  Renderdoc配置.doc  Root手机截帧.doc  Shader.doc  Vulkan.doc  Vulkan调试层.doc  android编译.doc  c++.doc  win32改hook.doc  关于Unsupported接口导致无法截帧.doc  渲染事件信息.doc
Z_Work/UI/: BufferViewer.doc  EventBrowser.doc
cmake_script/: utils.cmake
qrenderdoc/: CMakeLists.txt  pyrenderdoc_module.cmake  qrenderdoc.cmake  qrenderdoc_module.cmake
qrenderdoc/Code/: CaptureContext.cpp  QRDUtils.h  ReplayManager.cpp  qrenderdoc.cpp
qrenderdoc/Code/Interface/: PersistantConfig.cpp  QRDInterface.cpp
qrenderdoc/Code/pyrenderdoc/: CMakeLists.txt
qrenderdoc/Widgets/: ReplayOptionsSelector.cpp  ReplayOptionsSelector.ui
qrenderdoc/Windows/: EventBrowser.cpp  MainWindow.cpp
qrenderdoc/Windows/Dialogs/: CaptureDialog.cpp  CaptureDialog.ui  RemoteManager.cpp
qrenderdoc/Windows/PipelineState/: VulkanPipelineStateViewer.cpp  VulkanPipelineStateViewer.h  VulkanPipelineStateViewer.ui
qrenderdoc/extensions/: readme.txt
qrenderdoc/extensions/raw_texture_dump/: ReadMe.md  WindowDialog.py  __init__.py  extension.json
qrenderdoc/extensions/renderdoc-contrib-main/baldurk/whereismydraw/: AnalyseMesh.py  ExportUnityScene.py  PickPixel.py  decode_mesh.py
qrenderdoc/extensions/renderdoc2fbx-main/timmyliang/exporter/fbx/: __init__.py
renderdoc/: CMakeLists.txt
renderdoc/android/: android.cpp  android.h  android_utils.cpp  jdwp.cpp  jdwp_connection.cpp
renderdoc/api/replay/: capture_options.h  control_types.h
renderdoc/common/: common.cpp  common.h
renderdoc/core/: core.cpp  core.h  replay_proxy.cpp  replay_proxy.h  target_control.cpp
renderdoc/driver/d3d11/: CMakeLists.txt
renderdoc/driver/d3d12/: CMakeLists.txt
renderdoc/driver/dxgi/: CMakeLists.txt
renderdoc/driver/gl/: CMakeLists.txt  cgl_hooks.cpp  egl_dispatch_table.h  egl_hooks.cpp  gl_common.cpp  gl_common.h  gl_dispatch_table.h  gl_dispatch_table_defs.h  gl_driver.cpp  gl_driver.h  gl_hooks.cpp
renderdoc/driver/gl/wrappers/: gl_texture_funcs.cpp
renderdoc/driver/ihv/amd/: CMakeLists.txt
renderdoc/driver/ihv/arm/: CMakeLists.txt
renderdoc/driver/ihv/intel/: CMakeLists.txt
renderdoc/driver/ihv/nv/: CMakeLists.txt
renderdoc/driver/metal/: CMakeLists.txt  metal_hook.cpp
renderdoc/driver/shaders/dxbc/: CMakeLists.txt  dx_debug.h  renderdoc_dxbc.vcxproj
renderdoc/driver/shaders/dxil/: CMakeLists.txt
renderdoc/driver/shaders/spirv/: CMakeLists.txt
renderdoc/driver/vulkan/: CMakeLists.txt
renderdoc/driver/vulkan/wrappers/: vk_device_funcs.cpp
renderdoc/os/: os_specific.h
renderdoc/os/posix/: posix_network.cpp  posix_process.cpp  posix_stringio.cpp
renderdoc/os/posix/android/: android_network.cpp
renderdoc/os/posix/apple/: apple_hook.cpp
renderdoc/os/win32/: win32_callstack.cpp  win32_dll_dump.cpp  win32_dll_dump.h  win32_libentry.cpp  win32_network.cpp  win32_process.cpp
renderdoc/replay/: capture_options.cpp  renderdoc_serialise.inl
renderdoc/serialise/: streamio.cpp
renderdoccmd/: CMakeLists.txt  renderdoccmd.cpp  renderdoccmd.h  renderdoccmd_android.cmake  renderdoccmd_android.cpp  renderdocshim.cmake
renderdoccmd/android/: AndroidManifest.xml  Loader.java  build.gradle  renderdoccmd_config.cmake
renderdoccmd/android/gradle/: settings.gradle
renderdoccmd/android/gradle/Moudle/xcrash_lib/: build.gradle
renderdoccmd/android/gradle/Moudle/xcrash_lib/src/main/cpp/: CMakeLists.txt
renderdoccmd/android/gradle/app/: build.gradle
renderdoccmd/android/gradle/app/src/main/assets/shader/ndk/: frag.glsl  vertex.glsl
renderdoccmd/android/gradle/app/src/main/cpp/: CMakeLists.txt
renderdoccmd/android/gradle/app/src/main/cpp/Renderdoc/renderdoccmd/: CMakeLists.txt
renderdoccmd/android/gradle/app/src/main/cpp/Temp/: CMakeLists.txt  myapplication.cpp
renderdoccmd/android/gradle/app/src/main/cpp/cmake_script/: utils.cmake
renderdoccmd/android/gradle/gradle/wrapper/: gradle-wrapper.properties
renderdocshim/: renderdocshim.cpp
util/: set_plist_version.sh
util/test/demos/: CMakeLists.txt
